# mortgage-agent

./: .dockerignore  .gitignore  API_USAGE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  UPDATE_DEPENDENCIES.md  docker-compose.yml  pyproject.toml  requirements.txt  test_chat_endpoint.py  test_empty_request.py  test_loan_products.py
.github/workflows/: deploy.yml
app/: config.py  main.py  schemas.py
data/: loan_products.json
